# LLMBoardOfDirectors

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  meeting.json  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css  types.ts
src/boardroom/: __init__.py  __main__.py  config.py  models.py  registry.py
tests/: conftest.py  test_config.py  test_models.py
tests/test_api/: test_api_routes.py
tests/test_briefing/: test_cli_briefing.py  test_io.py
tests/test_cli/: test_agent_keys.py  test_history.py  test_meet_integration.py  test_serve.py
tests/test_custom_agents/: test_builder.py  test_storage.py
tests/test_e2e/: test_full_integration.py  test_smoke.py
tests/test_knowledge/: test_agent_init_integration.py  test_builder.py  test_connectors.py  test_freshness.py  test_pipeline.py  test_stages.py
tests/test_llm/: test_backend.py  test_router.py
tests/test_memory/: test_agent_memory.py
tests/test_orchestrator/: test_meeting_orchestrator_integration.py  test_termination.py  test_turn_selector.py
tests/test_persona/: test_bias.py  test_engine.py  test_style.py
tests/test_registry/: test_agent_registry.py
tests/test_secrets/: test_store.py
tests/test_selection/: test_cli_agents.py  test_parse_and_overlay.py  test_providers.py
tests/test_skills/: test_base.py  test_defaults.py  test_registry.py
tests/test_tools/: test_executor.py  test_python_executor.py  test_web_search.py
(+96 files in other folders)
