[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boardroom"
version = "0.1.0"
description = "Autonomous adversarial boardroom for stress-testing ideas with AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Boardroom contributors" }
]
dependencies = [
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<1.0",
  "langchain-core>=0.3,<0.4",
  "langgraph>=0.2,<0.3",
  "openai>=1.40,<2.0",
  "pydantic>=2.8,<3.0",
  "PyYAML>=6.0,<7.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0,<25.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
boardroom = "boardroom.cli.app:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["boardroom"]

[tool.hatch.build.targets.wheel]
packages = ["src/boardroom"]
